@@ -85,14 +85,9 @@ class vlad_fact : public vlad_list_item
     /* verify and copy */
     int vcopy(vlad_symtab *a_stab,
               vlad_varlist *a_vlist,
-              bool a_gndflag,
               vlad_fact **a_fact);
-    /*
-     * verify if fact is valid, if vlist is non-null, check if variables
-     * occur within this list. if gnd_flag is true, ensure that the fact
-     * is ground.
-     */
-    int verify(vlad_symtab *a_stab, vlad_varlist *a_vlist, bool a_gndflag);
+    /* check if fact is valid, any variables that occur must be in a_vlist */
+    int verify(vlad_symtab *a_stab, vlad_varlist *a_vlist);
     /* replaces instances of var with ident, gives a new fact */
     int replace(const char *a_var, const char *a_ident, vlad_fact **a_fact);
     /* replaces vars in vlist with entities in ilist. gives a new fact */
