@@ -1,5 +1,15 @@
 2005-12-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/expression.cpp :
+	* lib/expression.h :
+	* lib/fact.cpp :
+	* lib/fact.h :
+	* lib/polbase.cpp :
+
+	  - Removed the redundand gndflag parameter from the verify() and
+	    and vcopy() functions. Passing a NULL ptr for the vlist parameter
+	    implies that we are checking a ground expression.
+
 	* lib/Makefile.in :
 
 	  - More dependency corrections.
